# detector-tester-c

./: CMakeLists.txt
src/: main.c  model.h
